<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    android:background="#34326e">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/Cadastro_usuario"
        android:textColor="#ff9900"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="343dp"
        android:layout_height="370dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="123dp"
            android:layout_height="30dp"
            android:text="@string/dados_pessoais"
            android:textColor="#ff9900" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_nome_completo"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Senha"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_cpf"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_data_nascimento"
            android:textColor="#ff9900" />

        <EditText
            android:id="@+id/campoDtNasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_estado_Civil"
            android:textColor="#ff9900" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/EstadoCivil">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="10dp"
                android:text="Solteiro"
                android:background="#ffffff" />
            <CheckBox
                android:layout_marginLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="Casado"
                android:background="#ffffff" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btProximo"
        android:onClick="confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="85dp"
        android:layout_marginBottom="122dp"
        android:text="@string/bt_proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="#ff9900"/>



</androidx.constraintlayout.widget.ConstraintLayout>