<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/city"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="347dp"
        android:layout_height="561dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="#B9000000"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="61dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="161dp"
            android:layout_height="130dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:minWidth="30in"
            android:src="@mipmap/icone" />

        <EditText
            android:id="@+id/username"
            android:layout_width="289dp"
            android:layout_height="60dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textColorHint="#03A9F4"
            android:textColor="#03A9F4"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:textColor="#03A9F4"
            android:layout_width="289dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textColorHint="#03A9F4"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/login"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:background="#03A9F4"
            android:onClick="OnLogar"
            android:text="Logar"
            android:textColor="#fff"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Lembrar de mim"
            android:textColor="#fff"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <TextView
            android:id="@+id/cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cadastrar"
            android:layout_marginLeft="120dp"
            android:text="Cadastre-se"
            android:textSize="19dp"

            android:textColor="#03A9F4" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>